--- a/config/locales/model.ja.yml
+++ b/config/locales/model.ja.yml
@@ -1,13 +1,12 @@
 ja:
   activerecord:
     models:
-      student: 生徒
+      student: 生徒基本情報
       user: ユーザー
       family_environment: 家庭環境調査
-      student_family_environment: 中間テーブル（仮）
+      emergency_contact: 緊急連絡先
     attributes:
       student:
-      family_environment:
         student_furigana: 生徒名（ふりがな）
         student_name: 生徒名（漢字）
         sex: 性別
@@ -22,6 +21,19 @@ ja:
         name: 氏名
         age: 年齢
         created_at: 作成日時
-        family: 兄弟姉妹
+        family: 兄弟姉妹の校園名・学年・組/保護者・同居人の職業
         updated_at: 更新日時
         students: 生徒情報
+      family_environment:
+        relationship: 続柄
+        name: 氏名
+        age: 年齢
+        birthday: 生年月日
+        family: 兄弟姉妹の校園名・学年・組/保護者・同居人の職業
+      emergency_contact:
+        relationship: 続柄
+        name: 氏名
+        age: 年齢
+        contact_address: 連絡先
+        students: 生徒情報
+        telephone: 電話番号
